--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@ stages:
   - test
   - manifest
 variables:
-  BASE_TAG: "feature_KASM-4608_kasm_printing"
-  USE_PRIVATE_IMAGES: 1
+  BASE_TAG: "develop"
+  USE_PRIVATE_IMAGES: 0
   KASM_RELEASE: "1.14.0"
   DOCKER_AUTH_CONFIG: ${_DOCKER_AUTH_CONFIG}
   TEST_INSTALLER: "https://kasmweb-build-artifacts.s3.amazonaws.com/kasm_backend/7cbc7854255820c60cfecb2dee5177c1663af43a/kasm_workspaces_feature_KASM-4513-slim-upgrades_1.14.0.7cbc78.tar.gz"
