--- a/dockerfile-kasm-zoom
+++ b/dockerfile-kasm-zoom
@@ -10,20 +10,21 @@ WORKDIR $HOME
 
 ######### Customize Container Here ###########
 
-
+# Install Zoom
 COPY ./src/ubuntu/install/zoom $INST_SCRIPTS/zoom/
 RUN bash $INST_SCRIPTS/zoom/install_zoom.sh  && rm -rf $INST_SCRIPTS/zoom/
-
 COPY ./src/ubuntu/install/zoom/custom_startup.sh $STARTUPDIR/custom_startup.sh
 RUN chmod +x $STARTUPDIR/custom_startup.sh
 RUN chmod 755 $STARTUPDIR/custom_startup.sh
 
+# Install Chrome
+COPY ./src/ubuntu/install/chrome $INST_SCRIPTS/chrome/
+RUN bash $INST_SCRIPTS/chrome/install_chrome.sh  && rm -rf $INST_SCRIPTS/chrome/
 
 # Update the desktop environment to be optimized for a single application
 RUN cp $HOME/.config/xfce4/xfconf/single-application-xfce-perchannel-xml/* $HOME/.config/xfce4/xfconf/xfce-perchannel-xml/
 RUN cp /usr/share/extra/backgrounds/bg_kasm.png /usr/share/extra/backgrounds/bg_default.png
 RUN apt-get remove -y xfce4-panel
-
 
 ######### End Customizations ###########
 
