--- a/ci-scripts/template-vars.yaml
+++ b/ci-scripts/template-vars.yaml
@@ -177,6 +177,32 @@ multiImages:
       - src/ubuntu/install/chromium/**
       - src/ubuntu/install/ansible/**
       - src/ubuntu/install/chrome/**
+  - name: ubuntu-focal-desktop-vpn
+    base: core-ubuntu-focal
+    dockerfile: dockerfile-kasm-ubuntu-focal-desktop-vpn
+    changeFiles:
+      - dockerfile-kasm-ubuntu-focal-desktop
+      - src/ubuntu/install/zoom/**
+      - src/ubuntu/install/vs_code/**
+      - src/ubuntu/install/tools/**
+      - src/ubuntu/install/thunderbird/**
+      - src/ubuntu/install/terraform/**
+      - src/ubuntu/install/telegram/**
+      - src/ubuntu/install/sublime_text/**
+      - src/ubuntu/install/signal/**
+      - src/ubuntu/install/remmina/**
+      - src/ubuntu/install/only_office/**
+      - src/ubuntu/install/obs/**
+      - src/ubuntu/install/nextcloud/**
+      - src/ubuntu/install/misc/**
+      - src/ubuntu/install/gimp/**
+      - src/ubuntu/install/gamepad_utils/**
+      - src/ubuntu/install/firefox/**
+      - src/ubuntu/install/cleanup/**
+      - src/ubuntu/install/chromium/**
+      - src/ubuntu/install/ansible/**
+      - src/ubuntu/install/chrome/**
+      - src/ubuntu/install/vpn/**
   - name: ubuntu-jammy-desktop
     base: core-ubuntu-jammy
     dockerfile: dockerfile-kasm-ubuntu-jammy-desktop
