update logic so helpers work

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,38 @@ template:
       - gitlab-ci.yml
 pipeline:
   stage: run
+  except:
+    variables:
+      - $README_USERNAME_RUN
+      - $README_PASSWORD_RUN
+      - $DOCKERHUB_REVERT_RUN
+      - $REVERT_IS_ROLLING_RUN
+  trigger:
+    include:
+      - artifact: gitlab-ci.yml
+        job: template
+pipeline_readme:
+  stage: run
+  only:
+    variables:
+      - $README_USERNAME_RUN
+      - $README_PASSWORD_RUN
+  variables:
+      README_USERNAME: $README_USERNAME_RUN
+      README_PASSWORD: $README_PASSWORD_RUN
+  trigger:
+    include:
+      - artifact: gitlab-ci.yml
+        job: template
+pipeline_revert:
+  stage: run
+  only:
+    variables:
+      - $DOCKERHUB_REVERT_RUN
+      - $REVERT_IS_ROLLING_RUN
+  variables:
+      DOCKERHUB_REVERT: $DOCKERHUB_REVERT_RUN
+      REVERT_IS_ROLLING: $REVERT_IS_ROLLING_RUN
   trigger:
     include:
       - artifact: gitlab-ci.yml
