KASM-6450 rebase retroarch to Jammy and update config

--- a/ci-scripts/template-vars.yaml
+++ b/ci-scripts/template-vars.yaml
@@ -529,7 +529,7 @@ multiImages:
       - src/ubuntu/install/chromium/**
   - name: retroarch
     singleapp: true
-    base: core-ubuntu-focal
+    base: core-ubuntu-jammy
     dockerfile: dockerfile-kasm-retroarch
     changeFiles:
       - dockerfile-kasm-retroarch
